--- a/static/src/stylesheets/module/content/_content.scss
+++ b/static/src/stylesheets/module/content/_content.scss
@@ -1006,6 +1006,7 @@
 .meta__extras {
     position: relative;
     clear: both;
+    min-height: 45px;
 
     .content__head--crossword & {
         clear: none;
@@ -1223,6 +1224,28 @@
 
         .old-article-message--clock svg {
             fill: $neutral-3;
+        }
+    }
+
+    .meta__social {
+        .social--top {
+            padding-top: 8px;
+        }
+
+        .social--expanded-top {
+            background-color: $neutral-1;
+        }
+
+        .social__tray-close .inline-close {
+            background-color: darken($neutral-1, 5%);
+
+            &:hover {
+                background-color: $multimedia-support-5;
+            }
+
+            svg {
+                fill: $neutral-4;
+            }
         }
     }
 }
