Fix button toggle

--- a/common/app/views/fragments/social.scala.html
+++ b/common/app/views/fragments/social.scala.html
@@ -28,11 +28,11 @@
 }
 
 @SaveForLater = {
-    <li class="social--hidden social__item social__secondary social__saveforlater"><div class="meta__save-for-later js-save-for-later" data-position="top"></div></li>
+    <li class="social--hidden social__item social__secondary social__saveforlater js-social__secondary"><div class="meta__save-for-later js-save-for-later" data-position="top"></div></li>
 }
 
 @CloseTray = {
-    <li class="social__item social__secondary social--hidden social__tray-close">
+    <li class="social__item social__secondary js-social__secondary social--hidden social__tray-close js-social__tray-close">
         <span class="u-h">Close</span>
         @fragments.inlineSvg("close", "icon", List("inline-close--small"))
     </li>
