--- a/commercial/app/views/hosted/guardianHostedGallery.scala.html
+++ b/commercial/app/views/hosted/guardianHostedGallery.scala.html
@@ -6,34 +6,34 @@
     <!--[if (gt IE 9)|(IEMobile)]><!-->
     <style>
     .hosted-tone {
-        color: @{page.campaign.fontColour.brandColour};
+        color: @{page.campaign.fontColour.hexCode};
     }
 
     .hosted-tone-bg {
-        background-color: @{page.campaign.fontColour.brandColour};
+        background-color: @{page.campaign.fontColour.hexCode};
     }
 
     .hosted-tone-border {
-        border-color: @{page.campaign.fontColour.brandColour};
+        border-color: @{page.campaign.fontColour.hexCode};
     }
 
     .hosted-tone-btn,
     .hosted-tone-btn:focus,
     .hosted-tone-btn:hover {
-        background-color: @{page.campaign.fontColour.brandColour};
-        border-color: @{page.campaign.fontColour.brandColour};
+        background-color: @{page.campaign.fontColour.hexCode};
+        border-color: @{page.campaign.fontColour.hexCode};
     }
 
     .hosted-page .hosted__link {
-        color: @{page.campaign.fontColour.brandColour};
+        color: @{page.campaign.fontColour.hexCode};
     }
 
     .hosted-page ~ .survey-overlay-simple .survey-text__header {
-        background-color: @{page.campaign.fontColour.brandColour};
+        background-color: @{page.campaign.fontColour.hexCode};
     }
     </style>
         <!--<![endif]-->
-    <div class="hosted-page hosted-gallery-page--container hosted-gallery-page @if(page.campaign.fontColour.shouldHaveBrightFont) {hosted-page--bright}">
+    <div class="hosted-page hosted-gallery-page--container hosted-gallery-page @if(page.campaign.fontColour.isDark) {hosted-page--bright}">
         @guardianHostedHeader("hosted-gallery-page", page)
         <div class="l-side-margins hosted__side">
             <section class="hosted-tone--dark hosted-gallery__gallery-section">
