--- a/static/src/stylesheets/module/experiments/_embed.scss
+++ b/static/src/stylesheets/module/experiments/_embed.scss
@@ -9,7 +9,8 @@
 .contributions__epic {
     border-top: 1px solid $multimedia-main-2;
     background-color: $comment-support-2;
-    padding: 0 $gs-gutter / 4 $gs-baseline $gs-gutter / 4;
+    margin-top: $gs-baseline * 2;
+    padding: ($gs-baseline / 3) $gs-gutter / 4 $gs-baseline $gs-gutter / 4;
 }
 
 
@@ -41,9 +42,6 @@
 .contributions__paragraph--epic {
     @include fs-bodyCopy(2);
 }
-
-
-
 
 .contributions__epic-link {
     text-decoration: underline;
@@ -98,6 +96,9 @@
     display: flex;
     flex-direction: column;
 
+    @include mq($from: mobileLandscape) {
+        flex-direction: row;
+    }
 }
 
 .contributions__contribute {
