Track sponsor logo impressions
Includes custom dimension 31 in pageview hits to hold the names of
the page sponsor and any container sponsors on a front.

--- a/applications/app/views/fragments/galleryBody.scala.html
+++ b/applications/app/views/fragments/galleryBody.scala.html
@@ -46,7 +46,7 @@
     }
 </div>
 <div class="l-side-margins">
-    @fragments.contentFooter(page.item, page.related, "media", isPaidContent(page.item, page))
+    @fragments.contentFooter(page.item, page.related, "media", isPaidContent(page))
 </div>
 
 @galleryItem(adSlots: Seq[String], adInterval: Int, image: ImageAsset, rowNum: Int, imageElement: ImageElement) = {
