--- a/article/app/views/liveblog/liveBlogBody.scala.html
+++ b/article/app/views/liveblog/liveBlogBody.scala.html
@@ -150,7 +150,7 @@
     </article>
 
     @if(!amp) {
-        @fragments.contentFooter(article, model.related, isPaidContent = isPaidContent(article, model))
+        @fragments.contentFooter(article, model.related, isPaidContent = isPaidContent(model))
     }
 
 </div>
