--- a/common/app/views/fragments/analytics/google.scala.html
+++ b/common/app/views/fragments/analytics/google.scala.html
@@ -1,4 +1,5 @@
-@(page: model.Page)
+@(page: model.Page)(implicit request: RequestHeader)
+@import views.support.Commercial.listSponsorLogosOnPage
 @import views.support.GoogleAnalyticsAccount
 
 <script id='google_analytics'>
@@ -77,6 +78,9 @@
         ga('@{trackerName}.set', 'dimension26', (!!guardian.config.page.isHosted).toString());
         ga('@{trackerName}.set', 'dimension27', navigator.userAgent);
         ga('@{trackerName}.set', 'dimension29', window.location.href);
+        @for(sponsorLogos <- listSponsorLogosOnPage(page)) {
+          ga('@{trackerName}.set', 'dimension31', '@Html(sponsorLogos.mkString("|"))');
+        }
     }
 
     @defining(GoogleAnalyticsAccount.editorialTracker.trackerName) { trackerName =>
