first draft of amp osted article

--- a/common/app/views/fragments/amp/stylesheets/main.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/main.scala.html
@@ -257,6 +257,7 @@
     @fragments.amp.stylesheets.richLinks()
     @fragments.amp.stylesheets.ads()
     @fragments.amp.stylesheets.glabs()
+    @fragments.amp.stylesheets.hosted()
     @fragments.amp.stylesheets.tables()
     @fragments.amp.stylesheets.inlineSvgs()
     @fragments.amp.stylesheets.social()
