--- a/commercial/app/views/hosted/guardianHostedGallery.scala.html
+++ b/commercial/app/views/hosted/guardianHostedGallery.scala.html
@@ -40,7 +40,7 @@
                 <div class="js-hosted-gallery-container hosted-gallery__gallery-container">
                     <div class="js-hosted-gallery-frame hosted-gallery__gallery-frame">
                         <div class="js-hosted-gallery-images hosted-gallery__images-container">
-                            @guardianHostedGalleryImage(page.images.head, {
+                            @guardianHostedGalleryImage(page.images.head, if(page.standfirst.trim.isEmpty) {""} else {
                                 <div class="hosted-gallery__meta js-hosted-gallery-meta">
                                     <div class="content__main-column">
                                         <h1 class="hosted-gallery__heading">{page.title}</h1>
