--- a/article/app/views/fragments/articleBodyExplore.scala.html
+++ b/article/app/views/fragments/articleBodyExplore.scala.html
@@ -56,6 +56,6 @@
                 </div>
             </div>
         </article>
-        @fragments.contentFooter(article, model.related, isPaidContent = isPaidContent(model))
+        @fragments.contentFooter(article, model.related, isPaidContent = isPaidContent(article, model))
     </div>
 }
