--- a/common/app/views/fragments/contentMeta.scala.html
+++ b/common/app/views/fragments/contentMeta.scala.html
@@ -1,4 +1,4 @@
-@(item: model.ContentType, page: model.Page, showExtras: Boolean = true)(implicit request: RequestHeader)
+@(item: model.ContentType, page: model.Page, showBadge: Boolean = true, showExtras: Boolean = true)(implicit request: RequestHeader)
 @import conf.switches.Switches.SaveForLaterSwitch
 @import model._
 @import views.support.Commercial.isPaidContent
@@ -68,7 +68,7 @@
 
 
     @if(
-        item.tags.isVideo || item.tags.isAudio || (item.tags.isArticle && !isPaidContent(page))
+        item.tags.isVideo || item.tags.isAudio || (item.tags.isArticle && !isPaidContent(item, page))
     ) {
         @fragments.commercial.badge(item, page)
     }
