Hosted Gallery - fix the definition of scrollContainerWidth, depends on a frame element (which changes size!!)  for landscape mobile view

--- a/static/src/stylesheets/module/commercial/glabs/_hosted-gallery.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted-gallery.scss
@@ -201,7 +201,7 @@ $approxGalleryWidth: calc(167vh - #{5/3 * ($headerHeight + $footerHeight)});
     }
     .minimise-oj & {
         @include mq($until: tablet) {
-            padding-bottom: #{$footerHeight + 8px};
+            padding-bottom: $footerHeight;
         }
     }
 }
