Wrap liveblog body content in a DIV with a JS hook

--- a/article/app/views/liveblog/liveBlogBody.scala.html
+++ b/article/app/views/liveblog/liveBlogBody.scala.html
@@ -113,12 +113,14 @@
                         <div class="after-article js-after-article"></div>
                         <div class="js-bottom-marker"></div>
                     } else {
-                        @fragments.dropdown("Live feed", Some("live-feed"), true) {
-                            @views.html.liveblog.liveBlogBodyContent(model)
-                            @fragments.submeta(article)
-                            <div class="after-article js-after-article"></div>
-                            <div class="js-bottom-marker"></div>
-                        }
+                        <div class="js-liveblog-body-content">
+                            @fragments.dropdown("Live feed", Some("live-feed"), true) {
+                                @views.html.liveblog.liveBlogBodyContent(model)
+                                @fragments.submeta(article)
+                                <div class="after-article js-after-article"></div>
+                                <div class="js-bottom-marker"></div>
+                            }
+                        </div>
                     }
                 </div>
 
