Use new messages and styling in US engagement banner
Also changes the button to link to contributions rather than the supporter page

--- a/static/src/javascripts/projects/common/views/membership-message.html
+++ b/static/src/javascripts/projects/common/views/membership-message.html
@@ -3,7 +3,7 @@
         <span id="membership__engagement-message-text">
             <%=messageText%>
         </span>
-        <span id="membership__engagement-message-button" class="message-button-rounded__cta is-hidden">
+        <span id="membership__engagement-message-button" class="message-button-rounded__cta prominent">
             <span id="membership__engagement-message-button-caption"></span><span id="membership__engagement-message-button-arrow"><%=arrowWhiteRight%></span>
         </span>
     </div>
