--- a/static/src/javascripts/projects/common/views/contributions-epic-thankyou.html
+++ b/static/src/javascripts/projects/common/views/contributions-epic-thankyou.html
@@ -1,21 +1,3 @@
 <div class="contributions__epic">
-    <div>
-        <h2 class="contributions__title contributions__title--epic">
-            Since you're here ...</h2>
-        <p class="contributions__paragraph contributions__paragraph--epic"><%=p1%></p>
-        <p class="contributions__paragraph contributions__paragraph--epic"><%=p2%></p>
-    </div>
-    <flex class="contributions__amount-field">
-        <div>
-            <a class="contributions__option-button contributions__contribute contributions__contribute--epic contributions__contribute--epic-member contributions__contribute--epic-member-top" href="<%=linkUrl1%>" target="_blank">
-                <%=cta1%>
-            </a>
-        </div>
-
-        <div class="contributions__<%=hidden%>">
-            <a class="contributions__option-button contributions__contribute contributions__contribute--epic contributions__contribute--epic-member" href="<%=linkUrl2%>" target="_blank">
-                <%=cta2%>
-            </a>
-        </div>
-    </flex>
+    <p class="contributions__paragraph contributions__paragraph--epic"> Thank you for supporting us. Your crucial financial support makes our journalism possible. We do it because we believe, like you, that the world has never needed fearless, independent media more. If you know someone who might want to support us, why not tell them how they can by sharing this link?<p class="contributions__paragraph contributions__paragraph--epic">
 </div>
