--- a/static/src/stylesheets/module/content/_content.global.scss
+++ b/static/src/stylesheets/module/content/_content.global.scss
@@ -20,24 +20,15 @@
         display: block;
     }
 
-    .commentcount2__heading {
-        padding-right: 20px;
-    }
-
-    .sharecount__heading {
-        padding-right: 16px;
-    }
-
     .commentcount2__heading,
     .sharecount__heading {
-        @include fs-textSans(1);
-        line-height: 15px;
         height: 15px;
         margin: 0;
         position: relative;
 
         .inline-icon {
             position: absolute;
+            top: 0;
             right: 0;
         }
 
@@ -51,19 +42,25 @@
         }
     }
 
-    .inline-icon {
-        margin: 2px 0 0 -2px;
+    .sharecount__heading .inline-icon {
+        margin-top: -3px;
+    }
+
+    .commentcount2__heading .inline-icon {
+        margin-right: -2px;
     }
 
     .commentcount2__value,
     .sharecount__value {
-        @include fs-textSans(4);
+        @include fs-textSans(6);
+        font-weight: bold;
+        letter-spacing: -1px;
+        padding-top: $gs-baseline/5;
         display: block;
-        float: right;
+        text-align: right;
 
         @include mq(leftCol) {
-            float: none;
-            line-height: normal;
+            text-align: left;
         }
     }
 
