--- a/common/app/views/fragments/amp/stylesheets/hosted.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/hosted.scala.html
@@ -103,8 +103,10 @@
 }
 
 .hosted__banner {
+    height: 200px;
     position: relative;
     background-size: cover;
+    background-position: left;
 }
 
 .hosted__banner:after {
