implement thank you

--- a/static/src/stylesheets/module/experiments/_embed.scss
+++ b/static/src/stylesheets/module/experiments/_embed.scss
@@ -15,8 +15,19 @@
 
 
 .contributions__title {
-    @include fs-header(2);
+     @include fs-header(2);
+     margin: 0;
+ }
+
+.contributions__title--thankyou {
+    font-size: 28px;
+    line-height: 32px;
+    font-weight:normal;
     margin: 0;
+}
+
+.contributions__epic--thankyou {
+    padding-bottom: $gs-baseline/4;
 }
 
 .contributions__title--epic {
