--- a/static/src/stylesheets/module/_adslot.scss
+++ b/static/src/stylesheets/module/_adslot.scss
@@ -347,6 +347,13 @@
     }
 }
 
+.ad-slot--books-inline {
+    width: $gs-gutter * 6.5;
+    @include mq(mobileLandscape) {
+        width: gs-span(2);
+    }
+}
+
 .fc-container--sponsored .fc-container:first-child,
 .fc-container--advertisement-feature .fc-container:first-child,
 .fc-container--foundation-supported .fc-container:first-child,
