Alter the colour of the top bar to match the paid-for palette.

--- a/static/src/stylesheets/module/content/_content.scss
+++ b/static/src/stylesheets/module/content/_content.scss
@@ -763,6 +763,10 @@
     .tone-media--item {
         color: $neutral-1;
 
+        .rich-link__container:before{
+            background-color: $news-support-3
+        }
+
         .rich-link__standfirst {
             color: $neutral-1;
         }
